--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "amen-yaavod",
+  "homepage": "https://omershefer.github.io/jester/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://omershefer.github.io/jester-example/",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
